# sherlock-agent-eval

./: .gitignore  LICENSE  LICENSE-docs  Makefile  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cases/: SCHEMA.md
cases/toy-example/: case.json  solution.json
cases/toy-example/workspace/: directory-people.md  directory-places.md  informants.md  map.md  newspaper.md  notes.md
cases/your-case/: .gitkeep
docs/: _config.yml  index.md
docs/_layouts/: default.html
drivers/: dupla.py  monolith.py
prompts/: explorer.md  judge.md  player.md  theorist.md
scripts/: leakcheck.sh
sherlock_eval/: __init__.py  __main__.py  gm.py  rules.md  score.py
tests/: conftest.py  test_harness.py
