[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock-agent-eval"
version = "0.1.0"
description = "A cheat-resistant detective board-game harness for evaluating LLM agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "alexweil" }]
keywords = ["llm", "agents", "evaluation", "eval", "benchmark", "game-master"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/alexweil/sherlock-agent-eval"

[project.scripts]
sherlock-eval = "sherlock_eval.__main__:main"

[tool.setuptools]
packages = ["sherlock_eval"]

[tool.setuptools.package-data]
sherlock_eval = ["rules.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
